--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,3 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,800|Quicksand:400,500,700);
+$font1: 'Quicksand',
+sans-serif;
+$font2: 'Open Sans',
+sans-serif;
 $color-white: #fff;
 $color-black: #000;
 $color-grey-dark-1: #585858;
