--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -1,24 +1,14 @@
 .nav {
-    position: relative;
-    background-color: $color-black;
- 
-    &__ul{
-        display: flex;
-        padding: 2rem 3rem;
-        list-style-type: none;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        &-link {
-            flex: 1 1 20%;
-                & a {
-                    color: $color-white !important;
-                    text-decoration: none;
-                }
-                &:hover {
-                    color: $color-grey-dark-1;
-                }
-            }
-            
-    }
+    display: flex;
+    margin-right: -15px;
+}
+
+a {
+    text-decoration: none;
+    opacity: 0.75;
+    margin: 0 15px;
+}
+
+a:hover {
+    opacity: 1;
 }
