--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,6 @@
 @import 'abstracts/variables';
 @import 'abstracts/typography';
+@import 'abstracts/base';
 @import 'components/nav';
+@import 'components/header';
+@import 'components/hero';
